@@ -1,0 +1,136 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.solr.cloud
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|cloud
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeoutException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|CloudConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|CoreContainer
+import|;
+end_import
+
+begin_class
+DECL|class|MockZkController
+specifier|public
+class|class
+name|MockZkController
+extends|extends
+name|ZkController
+block|{
+DECL|method|MockZkController
+specifier|public
+name|MockZkController
+parameter_list|(
+name|CoreContainer
+name|cc
+parameter_list|,
+name|String
+name|zkServerAddress
+parameter_list|,
+name|int
+name|zkClientConnectTimeout
+parameter_list|,
+name|CloudConfig
+name|cloudConfig
+parameter_list|,
+name|CurrentCoreDescriptorProvider
+name|registerOnReconnect
+parameter_list|)
+throws|throws
+name|InterruptedException
+throws|,
+name|TimeoutException
+throws|,
+name|IOException
+block|{
+name|super
+argument_list|(
+name|cc
+argument_list|,
+name|zkServerAddress
+argument_list|,
+name|zkClientConnectTimeout
+argument_list|,
+name|cloudConfig
+argument_list|,
+name|registerOnReconnect
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getCoreContainer
+specifier|public
+name|CoreContainer
+name|getCoreContainer
+parameter_list|()
+block|{
+return|return
+name|super
+operator|.
+name|getCoreContainer
+argument_list|()
+return|;
+block|}
+block|}
+end_class
+
+end_unit
+
