@@ -132,6 +132,20 @@ name|solr
 operator|.
 name|cloud
 operator|.
+name|MockZkController
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|cloud
+operator|.
 name|ZkController
 import|;
 end_import
@@ -222,6 +236,20 @@ name|solr
 operator|.
 name|core
 operator|.
+name|CoreContainer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
 name|SolrConfig
 import|;
 end_import
@@ -277,6 +305,20 @@ operator|.
 name|KeeperException
 operator|.
 name|NoNodeException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|KeeperException
+operator|.
+name|SessionExpiredException
 import|;
 end_import
 
@@ -649,7 +691,7 @@ operator|.
 name|getZkHost
 argument_list|()
 argument_list|,
-literal|30
+literal|30000
 argument_list|)
 init|)
 block|{
@@ -690,7 +732,7 @@ operator|.
 name|getZkHost
 argument_list|()
 argument_list|,
-literal|30
+literal|30000
 argument_list|)
 init|)
 block|{
@@ -791,12 +833,12 @@ name|KeeperException
 throws|,
 name|InterruptedException
 block|{
-name|ZkController
-name|zkController
+name|CoreContainer
+name|mockAlwaysUpCoreContainer
 init|=
 name|mock
 argument_list|(
-name|ZkController
+name|CoreContainer
 operator|.
 name|class
 argument_list|,
@@ -813,6 +855,57 @@ name|CALLS_REAL_METHODS
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|when
+argument_list|(
+name|mockAlwaysUpCoreContainer
+operator|.
+name|isShutDown
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|Boolean
+operator|.
+name|FALSE
+argument_list|)
+expr_stmt|;
+comment|// Allow retry on session expiry
+name|MockZkController
+name|zkController
+init|=
+name|mock
+argument_list|(
+name|MockZkController
+operator|.
+name|class
+argument_list|,
+name|Mockito
+operator|.
+name|withSettings
+argument_list|()
+operator|.
+name|defaultAnswer
+argument_list|(
+name|Mockito
+operator|.
+name|CALLS_REAL_METHODS
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|zkController
+operator|.
+name|getCoreContainer
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|mockAlwaysUpCoreContainer
+argument_list|)
+expr_stmt|;
 name|when
 argument_list|(
 name|zkController
@@ -837,6 +930,12 @@ name|Boolean
 argument_list|>
 argument_list|()
 block|{
+specifier|volatile
+name|boolean
+name|sessionExpired
+init|=
+literal|false
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -849,11 +948,9 @@ parameter_list|)
 throws|throws
 name|Throwable
 block|{
-return|return
-name|client
-operator|.
-name|exists
-argument_list|(
+name|String
+name|path
+init|=
 operator|(
 name|String
 operator|)
@@ -864,10 +961,57 @@ argument_list|()
 index|[
 literal|0
 index|]
+decl_stmt|;
+name|perhapsExpired
+argument_list|()
+expr_stmt|;
+name|Boolean
+name|exists
+init|=
+name|client
+operator|.
+name|exists
+argument_list|(
+name|path
 argument_list|,
 literal|true
 argument_list|)
+decl_stmt|;
+name|perhapsExpired
+argument_list|()
+expr_stmt|;
+return|return
+name|exists
 return|;
+block|}
+specifier|private
+name|void
+name|perhapsExpired
+parameter_list|()
+throws|throws
+name|SessionExpiredException
+block|{
+if|if
+condition|(
+operator|!
+name|sessionExpired
+operator|&&
+name|rarely
+argument_list|()
+condition|)
+block|{
+name|sessionExpired
+operator|=
+literal|true
+expr_stmt|;
+throw|throw
+operator|new
+name|KeeperException
+operator|.
+name|SessionExpiredException
+argument_list|()
+throw|;
+block|}
 block|}
 block|}
 argument_list|)
